@@ -1,4 +1,5 @@
 2002-04-15  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* *game.cc: made output for is_installed slightly more useful
 	* *game.cc, files/utils.*: patch by Paul Hebble:
 	changed BG/SI_Game::is_installed not to require a path anymore
 
